# midasminer

./: README.md
game/: CMakeLists.txt
game/include/: CAnimation.h  CAnimationSystem.h  CApp.h  CBoard.h  CBoardState.h  CCandy.h  CCandyGenerator.h  CDelayAnimation.h  CDestroyAnimation.h  CEvent.h  CInputHandler.h  CMatcher.h  CMoveAnimation.h  CParallelAnimation.h  CRefiller.h  CScoringSystem.h  CSequentialAnimation.h  CSwapper.h  CTile.h  ETileType.h  SBoardCoords.h  SPixelCoords.h  Utils.h
game/src/: CAnimation.cpp  CAnimationSystem.cpp  CApp.cpp  CBoard.cpp  CBoardState.cpp  CCandy.cpp  CCandyGenerator.cpp  CDelayAnimation.cpp  CDestroyAnimation.cpp  CEvent.cpp  CInputHandler.cpp  CMatcher.cpp  CMoveAnimation.cpp  CParallelAnimation.cpp  CRefiller.cpp  CScoringSystem.cpp  CSequentialAnimation.cpp  CSwapper.cpp  CTile.cpp  Utils.cpp  main.cpp
game/tests/: main.cpp
